tenant3/tenant3-vip_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2017-10-27T09:12:09Z
  labels:
    app: tenant3-vip
  name: tenant3-vip
  namespace: default
  resourceVersion: "1644454"
  selfLink: /api/v1/namespaces/default/services/tenant3-vip
  uid: e95c82d5-baf6-11e7-9da9-6c92bf4ab1a8
spec:
  clusterIP: 10.102.183.176
  ports:
  - name: adb
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: adb
    role: master
    tenancy: tenant3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
